--- a/Stepik_3.3 white balance.ipynb
+++ b/Stepik_3.3 white balance.ipynb
@@ -8,35 +8,27 @@
    "source": [
     "from skimage.io import imread, imsave, imshow\n",
     "from skimage import img_as_float, img_as_ubyte\n",
-    "from numpy import ravel, clip, dstack\n",
+    "import numpy\n",
     "\n",
-    "im = imread('img.png')\n",
+    "im = imread('img1.png')\n",
     "floatIm = img_as_float(im)\n",
     "a0 = floatIm[:,:,0]\n",
     "a1 = floatIm[:,:,1]\n",
     "a2 = floatIm[:,:,2]\n",
     "\n",
-    "y = 0.2126 * a0 + 0.7152 * a1 + 0.0722 * a2\n",
-    "u = -0.0999 * a0 - 0.3360 * a1 + 0.4360 * a2\n",
-    "v = 0.6150 * a0 - 0.5586 * a1 - 0.0563 * a2\n",
+    "avg = floatIm.sum() / floatIm.size\n",
     "\n",
-    "k = ravel(y.copy())\n",
-    "k.sort()\n",
-    "q = k[int(len(k)*0.05):int(len(k)*0.95)]\n",
-    "first, last = q[0], q[-1]\n",
+    "def getW(A_0):\n",
+    "    return A_0.sum() / A_0.size / avg\n",
     "\n",
-    "dif = last - first\n",
+    "rw, gw, bw = getW(a0), getW(a1), getW(a2)\n",
     "\n",
-    "y_part = ((y - first) * (1 / dif))\n",
-    "y_img = clip(y_part, 0, 1)\n",
+    "b0, b1, b2 = a0 / rw, a1 / gw, a2 / bw\n",
     "\n",
-    "r = y_img + 1.2803 * v\n",
-    "g = y_img - 0.2148 * u - 0.3805 * v\n",
-    "b = y_img + 2.1279 * u\n",
     "\n",
-    "KEKW = dstack(( r,g,b))\n",
-    "KEKW = clip(KEKW, 0, 1)\n",
-    "res = img_as_ubyte(KEKW)\n",
+    "KEKW = numpy.dstack((b0,b1,b2))\n",
+    "res = numpy.clip(KEKW, 0, 1)\n",
+    "\n",
     "imsave('out_img.png', res)"
    ]
   }
